--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
+  "homepage": "https://tomaskri.com",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "test:unit": "vitest",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
     "oh-vue-icons": "^1.0.0-rc3",
@@ -25,6 +27,7 @@
     "bulma": "^1.0.1",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
+    "gh-pages": "^6.1.1",
     "jsdom": "^24.1.0",
     "prettier": "^3.2.5",
     "sass": "^1.77.8",
